# rust-html-parser-benchmark

./: Cargo.toml  README.md
benches/: bench.rs  html5ever.rs
