[package]
name = "rust-html-parser-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
html_parser = "0.6.2"
rphtml = "0.5.4"
rusthtml = "0.2.4"
htmlstream = "0.1.3"
tl = { git = "https://github.com/y21/tl", branch = "next", features = ["simd"] }
html5ever = "0.25.1"

[[bench]]
name = "bench"
harness = false
