[package]
name = "rust-html-parser-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
htmlstream = "0.1.3"
tl = { version = "0.7.4", features = ["simd"] }
html5ever = "0.25.1"
lol_html = "0.3.1"

[[bench]]
name = "bench"
harness = false
